event-driven-order-processing-system-main/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minishop-api
  labels:
    app: minishop-api
    app.kubernetes.io/name: minishop-api
    app.kubernetes.io/component: api
    release-track: stable
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: minishop-api
      release-track: stable
  template:
    metadata:
      labels:
        app: minishop-api
        app.kubernetes.io/name: minishop-api
        app.kubernetes.io/component: api
        app.kubernetes.io/version: v1
        release-track: stable
    spec:
      containers:
        - name: api
          image: minishop-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
