event-driven-order-processing-system-main/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minishop-worker
  labels:
    app: minishop-worker
    app.kubernetes.io/name: minishop-worker
    app.kubernetes.io/component: worker
    release-track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minishop-worker
      release-track: stable
  template:
    metadata:
      labels:
        app: minishop-worker
        app.kubernetes.io/name: minishop-worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/version: v1
        release-track: stable
    spec:
      containers:
        - name: worker
          image: minishop-worker:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9100
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
