event-driven-order-processing-system-main/k8s/worker-keda.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minishop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: minishop
  labels:
    app: worker
    app.kubernetes.io/name: minishop-worker
    app.kubernetes.io/component: worker
    release-track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      release-track: stable
  template:
    metadata:
      labels:
        app: worker
        app.kubernetes.io/name: minishop-worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/version: v1
        release-track: stable
    spec:
      containers:
        - name: worker
          image: ghcr.io/SEU_USUARIO/minishop-worker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9100
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: worker-metrics
  namespace: minishop
  labels:
    app: worker
spec:
  selector:
    app: worker
    release-track: stable
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
