event-driven-order-processing-system-main/k8s/worker-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minishop-worker-metrics
  labels:
    app: minishop-worker
    app.kubernetes.io/name: minishop-worker
    app.kubernetes.io/component: worker
    release-track: stable
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9100"
spec:
  selector:
    app: minishop-worker
    release-track: stable
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
  type: ClusterIP
